still trying to figure out white space issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,14 @@
   padding: 20px 10px;
 }
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    margin: 0 0 100px; /* bottom = footer height */
+}
+
 .navbar-brand{
 	font-size: 24px;
 }
